@@ -762,8 +762,9 @@ public interface CombatLibrary extends CMLibrary
 	 * in combat, it will help the mob recover some of their hit points,
 	 * mana, movement, etc.
 	 * @param mob the mob who is recovering
+	 * @return true if something changed
 	 */
-	public void recoverTick(MOB mob);
+	public boolean recoverTick(MOB mob);
 
 	/**
 	 * The heart of the alternative turn-based combat engine, this method is
