@@ -264,7 +264,7 @@ Behavior   : CombatAbilities\n\r\
 Targets    : MOBs\n\r\
 Parameters : (as derived class) and +SKILLID -SKILLID\n\r\
 Parameters : (MINTICKS=[NUM] MAXTICKS=[NUM] CHANCE=[NUM])\n\r\
-Parameters : (BSIZE=[NUM])
+Parameters : (BSIZE=[NUM])\n\r\
 Example    : (as derived class) -Spell_Sleep\n\r\
 Description: \n\r\
 Gives the mob the urge to use their skills, spells, prayers, songs, and other \
