@@ -581,7 +581,9 @@ the reacted to player/mob is not in the same room as the invoking mob.
 
 REGENERATION=\
 Ability    : Regeneration\n\r\
-Parameters : Classes of weapons which do permanent damage.\n\r\
+Parameters : (+[Classes of weapons which do permanent damage]) (+LEVEL[NUM])\n\r\
+Parameters : (HEALTH=[NUM BURST TICKS]) (BURST=[NUM]) (HITS=[NUM]) (MOVE=[NUM])\n\r\
+Parameters : (MANA=[NUM]) (HEALTH=[NUM]/[SKIP TICKS])\n\r\
 Example    : +MAGIC +SILVER +LEVEL5\n\r\
 Example    : +BASHING +PIERCING\n\r\
 Description: \n\r\
@@ -591,7 +593,17 @@ regenerate) if the damage is done by a weapon type specified in the \
 parameters.  Valid weapon types include the standard weapon types \
 (bashing, piercing, slashing, gassing, bursting, etc), magic to refer \
 to spells and magical weapons, weapon materials (silver, cotton, etc), \
-or a minimum weapon level specifier as shown above.
+or a minimum weapon level specifier as shown above. \r\n\
+\r\n\
+The regen parameters are all optional.  If the "health" parameter is given, then the mob \
+will get a number of regen ticks equal to the number given.  For instance, if the \
+value is 2, then the mob will get 1 extra regen per normal tick, a value of 3 means \
+2 extra times per tick, etc.  Values of 1 or less mean no extra regen ticks.  \
+The "burst" parameter refers to bursts of extra speed to the benefiting mobs \
+equal to the number given.  If the number given starts with + or -, then the \
+adjustment will be exactly that number, as opposed to another full recovery tick. \
+If no special regen parameters are given, defaults are used.\n\r\
+
 
 RITUALS=\
 These are lists the tasks which must be performed. Each task is separated by a "|" to mean that \
